--- a/workspace/NetEaseMusicCracker/res/layout/activity_main.xml
+++ b/workspace/NetEaseMusicCracker/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="org.chiontang.neteastmusiccracker.MainActivity" >
+    tools:context="org.chiontang.neteasemusiccracker.MainActivity" >
 
     <TextView
         android:id="@+id/textView1"
